--- a/index.html
+++ b/index.html
@@ -23,11 +23,15 @@
   <div class="comment">
     <div class="comment-body"><%- comment %></div>
     <div class="commenter">
-      <p>
-        <span class="posted-by">Posted By: </span>
-        <%- commenter %>
-      </p>
-    </div>
+  <p>
+    <span class="posted-by">Posted By: </span>
+    <% if(commenter !== '') { %>
+    <%= commenter %>
+    <% } else { %>
+    Anonymous
+    <% } %>
+  </p>
+</div>
   </div>
 </script>
   </body>
